# clockworkpi-picocalc-rust

./: Cargo.toml  README.md
.cargo/: config.toml
p1_usb_serial/: Cargo.toml  readme.md
p1_usb_serial/src/: main.rs
p2_spi_sdcard/: Cargo.toml  readme.md
p2_spi_sdcard/src/: main.rs
p3_spi_display/: Cargo.toml  readme.md
p3_spi_display/src/: main.rs
p4_i2c_keyboard/: Cargo.toml  readme.md
p4_i2c_keyboard/src/: main.rs
p5_pwm_speakers/: Cargo.toml  readme.md
p5_pwm_speakers/src/: main.rs
